--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,9 @@
       crossorigin="anonymous"
     />
 
-    <title>website</title>
+    <title>React todolist</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
